tests/toylang/neg/000556_mutation.toylang
program a = { a = a + program; } .
